[project]
name = "p2p-local-share-pro"
version = "0.1.0"
description = "BobShare Pro - P2P local file sharing with SQLAlchemy persistence"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "authlib>=1.7.0",
    "itsdangerous>=2.2.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "email-validator>=2.3.0",
]
